启用JWT令牌登录模块